crates/reinhardt-pages/tests/ui/page/fail/controlled_bind_wrong_signal.stderr
error[E0308]: mismatched types
  --> tests/ui/page/fail/controlled_bind_wrong_signal.rs:5:10
   |
 5 |       let _ = page!({
   |  _____________^
 6 | |         input {
 7 | |             a11y: off,
 8 | |             bind: wrong,
 9 | |         }
10 | |     });
   | |______^ expected `Signal<String>`, found `Signal<bool>`
   |
   = note: expected struct `reinhardt_pages::Signal<std::string::String>`
              found struct `reinhardt_pages::Signal<bool>`
   = note: this error originates in the macro `page` (in Nightly builds, run with -Z macro-backtrace for more info)
